--- a/views/404.ejs
+++ b/views/404.ejs
@@ -53,6 +53,7 @@
 		<p>the page you are looking for not avaible!</p>
 		
 		<a href="/" class="link_404">Go to Home</a>
+		<a href="/sgr" class="link_404">Swagger</a>
 	</div>
 		</div>
 		</div>
